changed words and added timer at end

--- a/docs/global.css
+++ b/docs/global.css
@@ -1,7 +1,7 @@
 html, body, main {
     margin: 0;
 
-    background-color: white;
+    background-color: black;
     align-items: center;
     justify-content: center;
 
